Bug 51493 - [ILK]Prefer mode(2560x1600) can’t light up for the second time with DP external display connected
Summary: [ILK]Prefer mode(2560x1600) can’t light up for the second time with DP exter...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Daniel Vetter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-27 19:42 UTC by Du Yan
Modified: 2017-10-06 14:49 UTC (History)
7 users (show)

See Also:
i915 platform:
i915 features:


Attachments
first time testdisplay -m (light normally) (123.86 KB, text/plain)
2012-06-27 19:42 UTC, Du Yan
no flags Details
second testdisplay -m (can't light up) (123.98 KB, text/plain)
2012-06-27 19:45 UTC, Du Yan
no flags Details
dmesg (98.61 KB, text/plain)
2012-07-03 00:58 UTC, Du Yan
no flags Details

Description Du Yan 2012-06-27 19:42:57 UTC
Created attachment 63540 [details]
first time testdisplay -m (light normally)

System Environment:
--------------------------
Platform: Ironlake
Kernel: (drm-intel-testing)af7c3e1256db0f0526f6176e68a14ddbe96fab63
Some additional commit info:
Merge: ff049b6 d6f24d0
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Jun 21 10:17:52 2012 +0200


Bug detailed description:
-------------------------

Running testdisplay –m on Ironlake platform with an DP external display.
Prefer mode(2560x1600) can’t light up for the second time. 
Prefer mode(2560x1600) only works well when the machine has just started. 
If test the second time, it failed to light up.
(2560x1600 60 2560 2608 2640 2720 1600 1603 1609 1646 0x9 0x48 268500)

And running testdisplay –a, we found that when the Prefer mode(2560x1600) fail to light up, 2048x1536 mode can light up normally.
If the Prefer mode(2560x1600) works well, 2048x1536 mode will fail to light up.
(2048x1536 60 2048 2200 2424 2800 1536 1537 1540 1589 0x6 0x0 267027)
Comment 1 Du Yan 2012-06-27 19:45:17 UTC
Created attachment 63541 [details]
second testdisplay -m (can't light up)
Comment 2 Du Yan 2012-07-01 22:50:48 UTC
Test with the combined revert patch.
Prefer mode(2560x1600) still can’t light up for the second time with DP external display connected.
Comment 3 Daniel Vetter 2012-07-02 01:29:43 UTC
Can you please attach dmesg with drm.debug=0xe after the screen has failed to light up for the second time (but please ensure that dmesg contains everything, including the first time we light up the dp screen and the boot messages).
Comment 4 Du Yan 2012-07-03 00:58:47 UTC
Created attachment 63750 [details]
dmesg
Comment 5 Chris Wilson 2012-07-31 21:57:57 UTC
Hmm, a month old already. Any chance we can dig out a bisect for this and shame the guilty party?
Comment 6 Daniel Vetter 2012-08-05 19:32:03 UTC
Also, retesting on latest dinq would be very interesting since we've merged two dp link training fixes (train harder from Paulo and prefer wide&slow from Jesse).
Comment 7 Du Yan 2012-08-10 02:58:30 UTC
We try to bisect and the result show that b2094ef840697bc8ca5d17a83b7e30fad5f1e9fa is the first bad commit. But b2094ef840697bc8ca5d17a83b7e30fad5f1e9fa is a merge commit. 
Then I test with the parent commits and i found that both 424a6f6 and 6681bc0 are good commits. 

commit b2094ef840697bc8ca5d17a83b7e30fad5f1e9fa  424a6f6ef990b7e9f56f6627bfc6c46b493faeb4  6681bc0deba495fad0d6fb349e40524abd1b1732
Merge: 424a6f6 6681bc0
Author: Linus Torvalds <torvalds@linux-foundation.org>
Date:   Thu Mar 22 13:00:13 2012 -0700

So now I’m a little confused, is it possible that the merge commit is a bad commit, even the parent commits are all good commits?
Comment 8 Daniel Vetter 2012-08-10 08:51:08 UTC
Certainly possible, albeit it doesn't happen often. If this really is the case it means some slight changes in the timing are causing this issue ... which makes it very hard to debug.

Keith is already fighting similar issues where a pipe doesn't light up, but only on 3-pipe configurations. Can you please attach the output of testdisplay -i, too?
Comment 9 shui yangwei 2012-08-28 08:21:58 UTC
Kernel: (drm-intel-testing)ef6113ad0f406db4fbe2bcf3359dd938a6046d75

This bug can also be reproduced, just like Du Yan described.
Comment 10 shui yangwei 2012-09-10 07:51:22 UTC
Kernel: (drm-intel-testing)c3c3d4e9c2daeca01c42040cda0e5e0579c5c80b


mode(2560x1600) can’t light up for the second time with DP mode can also reproduced.
Comment 11 Daniel Vetter 2012-09-13 11:36:46 UTC
Please test the patch at:

https://patchwork.kernel.org/patch/1446781/
Comment 12 shui yangwei 2012-09-14 03:02:09 UTC
System Environment:
--------------------------
Platform: Ironlake
Kernel: (drm-intel-next-queued)036223401d50594c35fc5f7eafdbd2ddbe3ec921
Some additional commit info:
Author: Lekensteyn <lekensteyn@gmail.com>
Date:   Tue Jun 26 00:36:24 2012 +0200


I build the latest kernel include /patch/1446781/, and this issue disappeared.
Comment 13 Daniel Vetter 2012-09-14 07:56:01 UTC
Fix merged to dinq as

commit b060990ee7b3d900495a2aabb0ba4f3595d21314
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Sep 12 23:24:09 2012 +0200

    drm/i915: rip out early dp port write for gm45/ilk
Comment 14 shui yangwei 2012-09-17 06:23:50 UTC
System Environment:
-------------------------------
Platform: Ironlake
Kernel: (drm-intel-nightly)2fc764a311ca1e51c69ac3ff2872ae49617f9b46
Some additional commit info:
Merge: 1a9a08f 3d840a1
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri Sep 14 23:27:47 2012 +0200


It could light up correctly, can't reproduce this issue.
Comment 15 Florian Mickler 2012-10-15 20:54:38 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc1:

commit fba92150aa9959b8f1fa39455315f5e8c59bb702
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Sep 12 23:24:09 2012 +0200

    drm/i915: rip out early dp port write for gm45/ilk
Comment 16 Elizabeth 2017-10-06 14:49:17 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.